chore: slight tweak to language

--- a/html/token-settings.html
+++ b/html/token-settings.html
@@ -24,7 +24,7 @@
             </form>
         </div>
         <div>
-            <h3>GitHub Releases as 2FA</h3>
+            <h3>GitHub release backed token</h3>
             <div>a publication will only be permitted if a corresponding release is found on GitHub.</div>
             <form id="release-token" action="/_/token">
                 <input type="hidden" value="release" name="type"/>
