chore: address code review, add tests

--- a/html/token-settings.html
+++ b/html/token-settings.html
@@ -29,7 +29,7 @@
             <form id="release-token" action="/_/token">
                 <input type="hidden" value="release" name="type"/>
                 <input class="ott" type="hidden" name="ott" value=""/>
-                <button>Create a token tied to releases</button>
+                <button>Create release-backed publication token</button>
             </form>
         </div>
         <div>
