--- a/html/login.html
+++ b/html/login.html
@@ -20,7 +20,7 @@
         </style>
         <div class="page">
             <div class="content">
-                <a id="login-link" href="{link}">login with github</a>
+                <a id="login-link" href="{link}">Login with github</a>
             </div>
         </div>
     </body>
