chore: use prettier for our markdown

--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
                 <h2>Actions</h2>
                 <div>
                     <a href="/_/manage-tokens">Manage tokens</a> 
-                    <br/>(Create and delete publish tokens.
+                    <br/>(Create and delete publish tokens)
                 </div>
                 {documentation}
                 <h2>News!</h2>
