--- a/html/index.html
+++ b/html/index.html
@@ -1,35 +1,37 @@
 <html>
-    <head>
-        <title>Wombat dressing room</title>
-        <link rel="stylesheet" href="/app.css" />
-        <link rel="stylesheet" href="/github-markdown.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
-        <article class="markdown-body">
-                <div id="message">
-                  You're logged in as {username}. <a id="logout-link" href="javascript:void(0);">logout</a>
-                </div>
-                <h2>Actions</h2>
-                <div>
-                    <a href="/_/manage-tokens">Manage tokens</a> 
-                    <br/>(Create and delete publish tokens)
-                </div>
-                {documentation}
-                <h2>News!</h2>
-                <div>
-                    <b>2019-07-30</b> support for fetching package metadata (lerna support)</b>
-                </div>
-                <div>
-                    <b>2019-07-23</b> support for <b>`npm dist-tag`</b>
-                </div>
-                <div>
-                    <b>2019-05-15</b> support for <b>`npm deprecate`</b>
-                </div>
-                <div>
-                    <b>2019-04-25</b> support for per package registry urls. no more login before every publish. background information <a href="https://sites.google.com/corp/google.com/node-team/publishing-npm-packages#h.p_xUnJvEi73t0O">docs</a>
-                </div>
-        </article>
-        <script src="/app.js"></script>
-    </body>
+  <head>
+    <title>Wombat dressing room</title>
+    <link rel="stylesheet" href="/app.css" />
+    <link rel="stylesheet" href="/github-markdown.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <article class="markdown-body">
+      <div id="message">
+        You're logged in as {username}.
+        <a id="logout-link" href="javascript:void(0);">logout</a>
+      </div>
+      <h2>Actions</h2>
+      <div>
+        <a href="/_/manage-tokens">Manage tokens</a>
+        <br />(Create and delete publish tokens)
+      </div>
+      {documentation}
+      <h2>News!</h2>
+      <div>
+        <b>2019-07-30</b> support for fetching package metadata (lerna support)
+      </div>
+      <div><b>2019-07-23</b> support for <b>`npm dist-tag`</b></div>
+      <div><b>2019-05-15</b> support for <b>`npm deprecate`</b></div>
+      <div>
+        <b>2019-04-25</b> support for per package registry urls. no more login
+        before every publish. background information
+        <a
+          href="https://sites.google.com/corp/google.com/node-team/publishing-npm-packages#h.p_xUnJvEi73t0O"
+          >docs</a
+        >
+      </div>
+    </article>
+    <script src="/app.js"></script>
+  </body>
 </html>
