chore: swap out manually edited project news with our soon to be auto-generated CHANGELOG

--- a/html/index.html
+++ b/html/index.html
@@ -16,21 +16,7 @@
         <a href="/_/manage-tokens">Manage tokens</a>
         <br />(Create and delete publish tokens)
       </div>
-      {documentation}
-      <h2>News!</h2>
-      <div>
-        <b>2019-07-30</b> support for fetching package metadata (lerna support)
-      </div>
-      <div><b>2019-07-23</b> support for <b>`npm dist-tag`</b></div>
-      <div><b>2019-05-15</b> support for <b>`npm deprecate`</b></div>
-      <div>
-        <b>2019-04-25</b> support for per package registry urls. no more login
-        before every publish. background information
-        <a
-          href="https://sites.google.com/corp/google.com/node-team/publishing-npm-packages#h.p_xUnJvEi73t0O"
-          >docs</a
-        >
-      </div>
+      {documentation} {changelog}
     </article>
     <script src="/app.js"></script>
   </body>
