docs: continue to flesh out README.md/other docs, add back documentation.md (#11)

--- a/html/login.html
+++ b/html/login.html
@@ -1,27 +1,16 @@
 <html>
-    <head>
-        <title>Wombat dressing room: login</title>
-    </head>
-    <body>
-        <style>
-            .page{
-                display:flex;
-            }
-
-            .content{
-                text-align:center;
-            }
-
-            #login-link{
-                text-decoration:none;
-                font-size:30px;
-                padding-left:40px;
-            }
-        </style>
-        <div class="page">
-            <div class="content">
-                <a id="login-link" href="{link}">login with github</a>
-            </div>
-        </div>
-    </body>
+  <head>
+    <title>Wombat dressing room: login</title>
+    <link rel="stylesheet" href="/app.css" />
+    <link rel="stylesheet" href="/github-markdown.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body>
+    <article class="markdown-body">
+      <h2>Welcome to Wombat Dressing Room!</h2>
+      <div>
+        <a id="login-link" href="{link}">Login with github</a>
+      </div>
+    </article>
+  </body>
 </html>
