docs: fix typo in manage-tokens.html

--- a/html/manage-tokens.html
+++ b/html/manage-tokens.html
@@ -30,7 +30,7 @@
           <div class="loading" style="display:none;">creating...</div>
         </form>
         <div id="created-tokens-display" style="display:none;">
-          <h4>Redently created tokens:</h4>
+          <h4>Recently created tokens:</h4>
           <div>
             <strong>Notice</strong>: these tokens will never be shown again.<br />creating
             multiple tokens without refreshing the page will keep adding them to
